# ftld-language-phenotypes

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: logging.yaml  project.example.yaml
data/: README.md
docs/: DATA_DICTIONARY.md  LITERATURE_PROTOCOL.md  PHASE_C_LABELING.md  PMC_OA_WORKFLOW.md  PUBLIC_REPO_POLICY.md  RATER_VALIDATION.md  REPRODUCIBILITY.md  SAP.md  STORYLINE.md  STORYLINE_TOPSHELF_PLAN.md
prompts/pmcoa/: pass_a_route_v1.md  pass_a_route_v2.md  pass_b_extract_v1.md  pass_b_extract_v2.md  pass_c_label_v1.md
queries/: pmcoa_search.yaml
reproducibility/pmcoa_registry/: registry__ftld_case_reports_oa_v1__20251227T223125Z.csv  split_recommendation__ftld_case_reports_oa_v1__20251227T223125Z.json  year_counts__ftld_case_reports_oa_v1__20251227T223125Z.csv
results/: README.md
scripts/: README.md  public_repo_audit.py  run_external_validation_notes.py  run_prestige_suite.py
src/paperjn/: citations.py  cli.py  config.py
src/paperjn/analysis/: __init__.py  early.py  literature.py  stability.py
src/paperjn/clustering/: __init__.py  kmeans.py  pca.py
src/paperjn/embeddings/: __init__.py  sentence_transformers_backend.py
src/paperjn/io/: __init__.py  curated.py
src/paperjn/llm/: json_utils.py  openai_client.py
tests/: test_citations.py  test_fdr.py  test_leakage.py  test_llm_json_utils.py  test_pass_a_guardrail.py  test_phase_c_schema_v1.py  test_pmcoa_extract_pipeline_resume.py  test_pmcoa_jats_fetch_resilience.py  test_pmcoa_parse_jats_blocks.py  test_pmcoa_routing.py
(+41 files in other folders)
