[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperjn"
version = "0.1.0"
description = "Reproducible analysis pipeline for language-dominant phenotypes in FTLD-spectrum clinical narratives (PMC OA)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "Satwant Kumar", email = "Satwant.Dagar@gmail.com" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.6",
  "pyyaml>=6.0.1",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.32",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=2.6",
]
literature = [
  "pypdf>=4.0",
  "beautifulsoup4>=4.12",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
paperjn = "paperjn.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
